Create the Header

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
+    <header>
+        <div id="logo">
+            <img src="./image/img.png" alt="image">
+        </div>
+        <div id="home">
+            Home
+        </div>
 
+        <div id="gallery">
+            Gallery
+        </div>
+
+        <div id="news">
+            News
+        </div>
+
+    </header>
 </body>
 </html>
