Create Footer and Body

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/foot.css">
+
 </head>
 <body>
+<div id="asd">
+    <left  class="navigation-button">
+        <button type="button">Register Customer</button>
+        <button type="button">Register User</button>
+        <button type="button">Register Seller</button>
+        <button type="button">Add NewItems</button>
+        <button type="button">Contact us</button>
+    </left>
+</div>
 
+
+
+<footer id="foot1" >
+    <strong>IJSE DEP 8 2022 <h1>Clone Pull</h1></strong>
+    All rights reserved.
+    <div >
+        <b>Version</b> 0.0.1
+    </div>
+</footer>
 </body>
 </html>
